syntax = "proto3";

option go_package = "github.com/MemeLabs/go-ppspp/pkg/pb;pb";
option java_package = "gg.strims.ppspp.proto";
option swift_prefix = "PB";

import "profile.proto";

message GetDirectoryEventsRequest {
  bytes network_key = 1;
}

message TestDirectoryPublishRequest {
  bytes network_key = 1;
}
message TestDirectoryPublishResponse {}

message DirectoryListingSnippet {
  string title = 1;
  string description = 2;
  repeated string tags = 3;
}

message DirectoryListingMedia {
  int64 started_at = 1;
  string mime_type = 2;
  uint32 bitrate = 3;
}

message DirectoryListingService {
  string type = 1;
}

message DirectoryListing {
  Certificate creator = 1;
  int64 timestamp = 2;
  DirectoryListingSnippet snippet = 3;

  oneof content {
    DirectoryListingMedia media = 1001;
    DirectoryListingService service = 1002;
  }

  bytes key = 10001;
  bytes signature = 10002;
}

message DirectoryServerEvent {
  message Publish {
    DirectoryListing listing = 1;
  }

  message Unpublish {
    bytes key = 1;
  }

  message ViewerCountChange {
    bytes key = 1;
    uint32 count = 2;
  }

  message ViewerStateChange {
    string subject = 1;
    bool online = 2;
    repeated bytes viewing_keys = 3;
  }

  oneof body {
    Publish publish = 1;
    Unpublish unpublish = 2;
    ViewerCountChange viewer_count_change = 3;
    ViewerStateChange viewer_state_change = 4;
  }
}

message CallDirectoryServerRequest {
  message RemoveListing {
    bytes key = 1;
  }

  bytes network_key = 1;
  oneof body {
    RemoveListing listing = 2;
  }
}

message OpenDirectoryClientRequest {
  bytes network_key = 1;
  bytes server_key = 2;
}

message DirectoryClientEvent {
  message Publish {
    DirectoryListing listing = 1;
    bytes signature = 2;
  }

  message Unpublish {
    bytes key = 1;
  }

  message Join {
    bytes key = 1;
  }

  message Part {
    bytes key = 1;
  }

  message Ping {
    int64 time = 1;
  }

  oneof body {
    Publish publish = 1;
    Unpublish unpublish = 2;
    Join join = 3;
    Part part = 4;
    Ping ping = 5;
  }
}

message DirectoryPublishRequest {
  DirectoryListing listing = 1;
}

message DirectoryPublishResponse {}

message DirectoryUnpublishRequest {
  bytes key = 1;
}

message DirectoryUnpublishResponse {}

message DirectoryJoinRequest {
  bytes key = 1;
}

message DirectoryJoinResponse {}

message DirectoryPartRequest {
  bytes key = 1;
}

message DirectoryPartResponse {}

message DirectoryPingRequest {}

message DirectoryPingResponse {}


service Directory {
  rpc Publish(DirectoryPublishRequest) returns (DirectoryPublishResponse);
  rpc Unpublish(DirectoryUnpublishRequest) returns (DirectoryUnpublishResponse);
  rpc Join(DirectoryJoinRequest) returns (DirectoryJoinResponse);
  rpc Part(DirectoryPartRequest) returns (DirectoryPartResponse);
  rpc Ping(DirectoryPingRequest) returns (DirectoryPingResponse);
}
